My_Workspace/target/.metadata/.plugins/org.eclipse.cdt.ui/001HelloWorld.build.log
23:03:00 **** Build of configuration Debug for project 001HelloWorld ****
make -j12 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f407vgtx.d" -MT"Startup/startup_stm32f407vgtx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Startup/startup_stm32f407vgtx.o" "../Startup/startup_stm32f407vgtx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
../Src/main.c: In function 'main':
../Src/main.c:24:2: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   24 |  printf("Hello World\n");
      |  ^~~~~~
../Src/main.c:24:2: warning: incompatible implicit declaration of built-in function 'printf'
../Src/main.c:20:1: note: include '<stdio.h>' or provide a declaration of 'printf'
   19 | #include <stdint.h>
  +++ |+#include <stdio.h>
   20 | 
../Src/syscalls.c:47:14: error: expected ')' before 'ch'
   47 | void (uint8_t ch)
      |              ^~~
      |              )
../Src/syscalls.c: In function '_write':
../Src/syscalls.c:114:3: warning: implicit declaration of function 'ITM_SendChar' [-Wimplicit-function-declaration]
  114 |   ITM_SendChar(*ptr++);
      |   ^~~~~~~~~~~~
make: *** [Src/subdir.mk:25: Src/syscalls.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j12 all" terminated with exit code 2. Build might be incomplete.

23:03:01 Build Failed. 3 errors, 3 warnings. (took 771ms)

